# rust-fib

./: CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/: CODEOWNERS
docker/: Dockerfile.fib-go  Dockerfile.grpc  Dockerfile.http  compose.yaml
fib-cli/: Cargo.toml
fib-cli/src/: main.rs
fib-cli/src/commands/: mod.rs  number.rs  sequence.rs
fib-core/: Cargo.toml  fib_core.h
fib-core/src/: ffi.rs  lib.rs  wasi.rs  wasm.rs
fib-go/: go.mod
fib-go/cmd/: main.go
fib-go/internal/algorithm/: algorithm_test.go  errors.go  fib.go  rust.go
fib-grpc/: Cargo.toml  build.rs
fib-grpc/src/: main.rs
fib-http/: Cargo.toml
fib-http/src/: index.html  main.rs
fib-wasm/: .gitignore  go.mod  main.go  main_test.go
proto/: fib.proto
src/: fib.rs  main.rs
src/commands/: grpc.rs  mod.rs  number.rs  sequence.rs  serve.rs
