[package]
name = "fib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
num-format = "0.4.4"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = "0.14"
tonic-reflection = "0.14"
prost = "0.14"
tonic-prost = "0.14.5"
tokio-stream = "0.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [ "env-filter", "json", "time" ] }
tower-http = { version = "0.6.8", features = ["trace"] }
tower = "0.5.3"
axum-test = "18.7.0"

[build-dependencies]
tonic-prost-build = "0.14"
