[package]
name = "fib-http"
version = "0.1.0"
edition = "2024"

[dependencies]
fib-core = { path = "../fib-core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [ "env-filter", "json", "time" ] }
tower-http = { version = "0.6.8", features = ["trace"] }

[dev-dependencies]
axum-test = "18.7.0"
